[tool.poetry]
name = "llama-steer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^1.26.4"
transformer-lens = "^2.9.1"
sae-lens = "^5.2.0"
transformers = "^4.47.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
